Mobile- homepage- spacing fixes

--- a/src/components/Blocks/Logos/logos.module.scss
+++ b/src/components/Blocks/Logos/logos.module.scss
@@ -52,7 +52,7 @@
 
 @media screen and (max-width: 992px) {
   .logosblock {
-    padding: 30px 0;
+    padding: 20px 0;
 
     .logoslist {
       margin: 0;
